# datacenter

./: .dockerignore  .env  .eslintrc.json  Dockerfile  README.md  bill_ex.bat  docker-compose.yml  makefile  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish-docker.yml  publish.yml
lib/: makefile
lib/src/: CMakeLists.txt  main.cpp
src/: AIServiceBase.ts  AIServiceInstances.ts  app.ts  appbase.ts  billconfig.json  billfs.ts  billing.ts  cli.ts  client.json  commclnt.ts  commsrv.ts  communication.ts  dailybill.json  dailybill_A.json  dailybill_F.json  dailybill_H.json  dailybill_back.json  data-source.ts  data-transformer.ts  dataDestinationsConfig.json  dataSourcesConfig.json  dbcore.ts  index.js  index.ts  keymng.ts  ktt.ts  logger.json  logger.ts  memdatabase.ts  memmsgq.ts  memtable.ts  mutex.ts  openaiclient.ts  table.ts  tablesConfig.json  testtbl.json  transaction.ts  websrv.ts
src/entity/: Client.ts  Key.ts  KttBilling.ts
test/: 1.xlsx
